[gd_scene load_steps=16 format=3 uid="uid://2usj0bol3m53"]

[ext_resource type="Script" path="res://scripts/fish.gd" id="1_w2oih"]
[ext_resource type="Texture2D" uid="uid://gsybvggnne60" path="res://bubble_pop.png" id="3_h4t4r"]
[ext_resource type="PackedScene" uid="uid://d14a5xijaxh0a" path="res://scenes/fish_types/fish_1.tscn" id="3_lstq2"]
[ext_resource type="AudioStream" uid="uid://cv2j7drps4apc" path="res://sounds/Dropping tiny pebble in still water surface by jorickhoofd -- httpsfreesound.orgs160119 -- License Attribution 4.0.wav" id="4_lw8p6"]
[ext_resource type="AudioStream" uid="uid://gu3yqhhjlthl" path="res://sounds/fish_splashing.wav" id="5_xicmx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sk6t4"]
atlas = ExtResource("3_h4t4r")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5nwu"]
atlas = ExtResource("3_h4t4r")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvmy4"]
atlas = ExtResource("3_h4t4r")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwk7n"]
atlas = ExtResource("3_h4t4r")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh328"]
atlas = ExtResource("3_h4t4r")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkl6i"]
atlas = ExtResource("3_h4t4r")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3mpv"]
atlas = ExtResource("3_h4t4r")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3wtm"]
atlas = ExtResource("3_h4t4r")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_027g8"]
atlas = ExtResource("3_h4t4r")
region = Rect2(22, 5, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_qgmou"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sk6t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5nwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvmy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwk7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh328")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkl6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3mpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3wtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_027g8")
}],
"loop": false,
"name": &"QTE",
"speed": 3.0
}]

[node name="FishTemplate" type="CharacterBody3D"]
motion_mode = 1
script = ExtResource("1_w2oih")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_postprocessing = 1
avoidance_enabled = true

[node name="FishCollider" parent="." instance=ExtResource("3_lstq2")]

[node name="LuringText" type="Label3D" parent="FishCollider"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -1.77636e-14, 0.2625)
visible = false
billboard = 1
no_depth_test = true
text = "E"
font_size = 96
outline_size = 48

[node name="BubbleSprite" type="AnimatedSprite3D" parent="FishCollider/LuringText"]
transform = Transform3D(0.9, 0, 0, 0, -3.93402e-08, 0.9, 0, -0.9, -3.93402e-08, 0, 0, 0)
modulate = Color(1, 1, 1, 0.509804)
billboard = 1
no_depth_test = true
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_qgmou")
animation = &"QTE"

[node name="ReelingText" type="Label3D" parent="FishCollider"]
visible = false
billboard = 1
no_depth_test = true
text = "because
big
words"
font_size = 64
outline_size = 32

[node name="SFXDrop" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_lw8p6")

[node name="SFXWiggle" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_xicmx")
volume_db = -10.0
pitch_scale = 0.24

[connection signal="animation_finished" from="FishCollider/LuringText/BubbleSprite" to="." method="_on_bubble_sprite_animation_finished"]
[connection signal="frame_changed" from="FishCollider/LuringText/BubbleSprite" to="." method="_on_bubble_sprite_frame_changed"]
